[project]
name = "controller"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.1",
    "dotenv>=0.9.9",
    "logging>=0.4.9.6",
    "nut2>=2.1.1",
    "requests>=2.32.5",
    "rich>=13.9.4",
    "typing>=3.10.0.0",
    "uv2>=1.88.1133",
    "wakeonlan>=3.1.0",
]
